# windows-security-scanner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: remover.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser_fix.rs  cli_main.rs  elevation.rs  lib.rs  main.rs  quarantine.rs  report.rs  threat.rs  updater.rs
src-tauri/src/scanner/: browser.rs  files.rs  mod.rs  network.rs  processes.rs  scareware.rs
src-tauri/src/signatures/: extension_ids.rs  hashes.rs  hijacker_domains.rs  ip_blocklist.rs  safe_tasks.rs
src/scanner/: startup.rs
src/signatures/: mod.rs  process_names.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  styles.css
