[package]
name = "down"
version = "0.3.0"
edition = "2021"
description = "DOWN — AI-powered Windows security scanner with Claude cockpit"
license = "MIT"

[lib]
name = "down"
path = "src/lib.rs"

[[bin]]
name = "down"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
walkdir = "2.5"
sha2 = "0.10"
colored = "3.0"
chrono = "0.4"
dirs = "6.0"
ureq = "3.0"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_ProcessStatus",
    "Win32_Security",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
